*master*

* Added transactional support to RailsContext. Disabled by default [jaknowlden]

    rails_context Room
      set :transactional, true
    end

* Added option enabling to RailsContext [jaknowlden]

    rails_context Room
      set :this, "that"
    end

* Added initial #rails_context. Assumes ActiveRecord class for now [jaknowlden]

    class Room < ActiveRecord::Base
      # ...
    end

    # TEST

    rails_context Room do
      asserts_topic.belongs_to(:house)
      asserts_topic.validates_presence_of(:house_id)
    end

* Added the #belongs_to ActiveRecord assertion macro [jaknowlden]

    context "a Room" do
      setup { Room.new }
      asserts_topic.belongs_to(:house)
    end